--- a/Main.html
+++ b/Main.html
@@ -2,7 +2,7 @@
   <head>
     <title>
       <link rel="stylesheet" href="Style.css">
-      ARe you Sigma
+      <a class="bigButton">Block Smash</a>
     </title>
   </head>
   <body>
