--- a/Main.html
+++ b/Main.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Project Gaming: Home</title>
   <link rel="icon" type="image/png" href="favicon.png">
-  <link href="/style.css" rel="stylesheet" type="text/css"/>
+  <link href="/Style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
